Fix spacing of Wedding Details page

--- a/style.css
+++ b/style.css
@@ -290,9 +290,9 @@ footer img {
 }
 
 .section-header {
-  font-family: 'Great Vibes', cursive;
-  font-size: 32px;
-  text-transform: uppercase;
+  /* font-family: 'Great Vibes', cursive; */
+  font-size: 3rem;
+  /* text-transform: uppercase; */
   text-align: center;
   color: #f8e1e7;
   letter-spacing: 2px;
@@ -731,6 +731,10 @@ Mobile mode settings
   }
 
   /**Wedding Details section in mobile mode*/
+  .detailswed {
+    padding: 0;
+  }
+  
   .place img {
     width: 90%;
     float: none;
@@ -762,6 +766,10 @@ Mobile mode settings
   }
 
   /**Accommodations section in mobile mode*/
+  .section-header {
+    font-size: 2rem;
+  }
+
   .event-travel p {
      font-size: 1.5rem;
      display: block;
